# NUC6Yuan-AcceptanceForm

./: CMakeLists.txt  README.md  SourceForm.xlsx  icon.rc  mainwindow.cpp  mainwindow.h  source.qrc
